initial wrapper done (Read: good enough for now)

--- a/meson.build
+++ b/meson.build
@@ -1,3 +1,11 @@
 project('bx', 'cpp')
 bxHeaders = include_directories('bx/include')
-library('bx', 'bx/src/amalgamated.cpp', include_directories: bxHeaders)
+thirdParty = include_directories('bx/3rdparty')
+
+cpp = meson.get_compiler('cpp')
+pthread = cpp.find_library('pthread')
+dl = cpp.find_library('dl', required: true)
+gl = dependency('GL')
+
+
+library('bx', 'bx/src/amalgamated.cpp', include_directories: [bxHeaders, thirdParty], dependencies: [dl, gl, pthread])
